--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -1,4 +1,6 @@
 @import url(fontface.css);
+@import url(owl.carousel.min.css);
+@import url(owl.theme.default.min.css);
 *,
 *:after,
 *:before {
@@ -7,6 +9,7 @@
   box-sizing: border-box; }
 
 a {
+  color: black;
   text-decoration: none;
   -webkit-transition: color 0.3s;
   transition: color 0.3s; }
@@ -122,6 +125,9 @@ main {
 
   .vertical-align:before {
     margin-right: -0.25em; } }
+article {
+  padding: 0 1em; }
+
 .announcements {
   font-size: 17px;
   margin: 0 auto;
@@ -275,10 +281,7 @@ main {
     display: none;
     margin: 0; }
     .navigation-menu .social-networks .social-network {
-      color: white;
-      display: inline-block;
-      font-size: 1.5em;
-      padding: 0.25em; }
+      color: white; }
 
 .picture-credits {
   bottom: 0;
@@ -302,6 +305,66 @@ main {
     content: "/";
     display: inline-block;
     margin-right: 0.2em; }
+
+.post-actions {
+  text-align: center; }
+  .post-actions [class^="icon-"] {
+    background: black;
+    border: 1px solid black;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    color: black;
+    display: inline-block;
+    font-size: x-large;
+    height: 25px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    width: 25.5px; }
+  .post-actions .post-attachment-link {
+    display: inline-block;
+    padding: 0.5em;
+    width: 100px; }
+    .post-actions .post-attachment-link:hover [class^="icon-"] {
+      color: white; }
+  .post-actions .post-attachment-text {
+    font-size: 14px;
+    font-weight: 500; }
+
+.post-content p {
+  font-size: 14px; }
+  .post-content p:first-of-type {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center; }
+
+.post-gallery {
+  margin: 0 auto;
+  position: relative; }
+  .post-gallery figcaption {
+    margin-top: 0.5em; }
+    .post-gallery figcaption div {
+      font-size: 12px;
+      text-transform: uppercase; }
+      .post-gallery figcaption div.line1 {
+        font-weight: bold; }
+  .post-gallery .gallery-controls {
+    left: -1em;
+    position: absolute;
+    right: -1em;
+    top: 45%;
+    z-index: 2; }
+    .post-gallery .gallery-controls div {
+      cursor: pointer;
+      display: inline-block; }
+      .post-gallery .gallery-controls div.owl-next {
+        float: right; }
+      .post-gallery .gallery-controls div.owl-prev {
+        float: left; }
+
+.post-title {
+  font-size: 38px;
+  font-weight: bold;
+  text-align: center; }
 
 .prod-team {
   font-family: monocromo;
@@ -348,6 +411,16 @@ main {
     vertical-align: middle; }
     .select-display span[class^="icon-"] {
       font-size: x-large; }
+
+.social-networks {
+  list-style-type: none;
+  margin: 0.5em 0;
+  padding: 0;
+  text-align: center; }
+  .social-networks .social-network {
+    display: inline-block;
+    font-size: 1.5em;
+    padding: 0.25em; }
 
 @media screen and (max-width: 48em) {
   .navigation-menu {
