--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -330,12 +330,14 @@ article {
     font-size: 14px;
     font-weight: 500; }
 
-.post-content p {
-  font-size: 14px; }
-  .post-content p:first-of-type {
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center; }
+.post-content {
+  position: relative; }
+  .post-content p {
+    font-size: 14px; }
+    .post-content p:first-of-type {
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center; }
 
 .post-gallery {
   margin: 0 auto;
@@ -460,6 +462,10 @@ article {
       -webkit-transition: color 0.3s;
       transition: color 0.3s; } }
 @media screen and (min-width: 48em) {
+  article {
+    margin: 0 auto;
+    width: 70%; }
+
   .artists li {
     display: inline-block;
     width: 49%; }
@@ -527,7 +533,11 @@ article {
     display: none !important; }
 
   .picture-credits {
-    display: block; } }
+    display: block; }
+
+  .post-gallery .gallery-controls {
+    left: -4em;
+    right: -4em; } }
 @media screen and (min-width: 62.5em) {
   .artists.thumb li {
     width: 250; }
@@ -538,7 +548,16 @@ article {
     right: 0;
     text-align: center; }
   .navigation-menu .kc-ml-languages {
-    right: 10em; } }
+    right: 10em; }
+
+  .post-actions {
+    position: absolute;
+    right: -8em;
+    top: 6em; }
+
+  .post-content {
+    margin: 0 auto;
+    width: 55%; } }
 @media screen and (max-width: 48em) {
   .navigation-menu.is-visible {
     background: #222;
