--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -109,6 +109,42 @@ article
 	padding: 0
 	width: 80%
 
+.events
+	bottom: -2em
+	left: 2em
+	position: absolute
+	width: 120px
+
+	h3,
+	p,
+	ul
+		margin-bottom: 0.5em
+		margin-top: 0
+
+	h3
+		font-size: 11px
+		font-weight: 500
+		text-transform: uppercase
+
+	p
+		font-size: 12px
+
+	ul
+		list-style-type: none
+		padding: 0
+
+		li
+			font-size: 14px
+			font-weight: bold
+
+			&:not(:first-of-type):not(:nth-child(2)):before,
+			&:first-of-type:after
+				border: 1px solid
+				content: ''
+				display: block
+				margin: 0.25em 0
+				width: 30%
+
 .footer-item
 	margin-bottom: 1em
 
