--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -228,6 +228,35 @@ article {
   padding: 0;
   width: 80%; }
 
+.events {
+  bottom: -2em;
+  left: 2em;
+  position: absolute;
+  width: 120px; }
+  .events h3,
+  .events p,
+  .events ul {
+    margin-bottom: 0.5em;
+    margin-top: 0; }
+  .events h3 {
+    font-size: 11px;
+    font-weight: 500;
+    text-transform: uppercase; }
+  .events p {
+    font-size: 12px; }
+  .events ul {
+    list-style-type: none;
+    padding: 0; }
+    .events ul li {
+      font-size: 14px;
+      font-weight: bold; }
+      .events ul li:not(:first-of-type):not(:nth-child(2)):before, .events ul li:first-of-type:after {
+        border: 1px solid;
+        content: "";
+        display: block;
+        margin: 0.25em 0;
+        width: 30%; }
+
 .footer-item {
   margin-bottom: 1em; }
 
