Hide events in mobiles and tablets

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -111,6 +111,7 @@ article
 
 .events
 	bottom: -2em
+	display: none
 	left: 2em
 	position: absolute
 	width: 120px
@@ -580,6 +581,9 @@ article
 		&.thumb
 			li
 				width: 250
+
+	.events
+		display: block
 
 	.navigation-menu
 		nav
