--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -230,6 +230,7 @@ article {
 
 .events {
   bottom: -2em;
+  display: none;
   left: 2em;
   position: absolute;
   width: 120px; }
@@ -635,6 +636,9 @@ article {
 @media screen and (min-width: 62.5em) {
   .artists.thumb li {
     width: 250; }
+
+  .events {
+    display: block; }
 
   .navigation-menu nav {
     left: 0;
