--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -8,6 +8,14 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+::-moz-selection {
+  background: #222;
+  color: white; }
+
+::selection {
+  background: #222;
+  color: white; }
+
 a {
   color: black;
   text-decoration: none;
