Current exhibition markup and CSS

--- a/wp-content/themes/mc2015/css/_base.sass
+++ b/wp-content/themes/mc2015/css/_base.sass
@@ -12,6 +12,9 @@ a
 	text-decoration: none
 	transition: color 0.3s
 
+	&:hover
+		color: rgba(0, 0, 0, 0.7)
+
 body
 	background: white
 	border: 10px solid black
