Current exhibition styles for desktop

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -648,6 +648,11 @@ article
 	.events
 		display: block
 
+	.exhibition-current
+		margin: 4em auto 2em auto
+		max-width: 780px
+		width: 75%
+
 	.navigation-menu
 		nav
 			left: 0
