--- a/wp-content/themes/mc2015/css/_base.sass
+++ b/wp-content/themes/mc2015/css/_base.sass
@@ -32,6 +32,11 @@ main.index,
 	min-height: 100%
 	//height: 100%
 
+button
+	background: none
+	border: none
+	outline: none
+
 figure
 	margin: 0
 
