--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -150,7 +150,7 @@ article
 	background-position: center
 	background-repeat: no-repeat
 	background-size: cover
-	margin-top: 2em
+	margin: 2em auto 4em auto
 	padding: 1em
 	position: relative
 
@@ -180,22 +180,50 @@ article
 		line-height: 1em
 		margin: 1em auto
 
-	.exhibition-type
-		font-size: 12px
-		font-weight: bold
-		left: 0
-		position: absolute
-		right: 0
-		text-transform: uppercase
-		top: -3em
+.exhibition-past
+	display: inline-block
+	margin: 1em
+	text-align: left
+	width: 300px
 
-		&:after
-			border: 1px solid
-			bottom: -6em
-			content: ''
-			height: 5.5em
-			left: calc(50% - 1px)
-			position: absolute
+	.exhibition-detail
+		font-size: 14px
+		font-weight: normal
+		margin: 0
+
+	.exhibition-img
+		background-position: center
+		background-size: cover
+		height: 180px
+		width: 300px
+
+		a
+			display: block
+			height: 100%
+			width: 100%
+
+	.exhibition-title
+		font-size: 18px
+		font-weight: bold
+		margin: 0
+		margin-top: 0.25em
+
+.exhibition-type
+	font-size: 12px
+	font-weight: bold
+	left: 0
+	position: absolute
+	right: 0
+	text-transform: uppercase
+	top: -3em
+
+	&:after
+		border: 1px solid
+		bottom: -6em
+		content: ''
+		height: 5.5em
+		left: calc(50% - 1px)
+		position: absolute
 
 .footer-item
 	margin-bottom: 1em
@@ -286,6 +314,35 @@ article
 
 .next-post-link
 	right: 1em
+
+.past-exhibitions
+	margin-top: 8em
+	position: relative
+	text-align: center
+
+	.exhibition-type
+		top: -8em
+
+	.past-exhibition-by-year
+		position: relative
+
+		.exhibition-close
+			font-weight: bold
+			position: absolute
+			right: 0.5em
+			top: 0.5em
+
+	.past-exhibition-year
+		font-size: 32px
+		font-weight: bold
+		margin: 0.5em auto
+
+		a
+			color: rgba(0, 0, 0, 0.3)
+
+		&.active a,
+		a:hover
+			color: black
 
 .prev-post-link
 	left: 1em
@@ -649,7 +706,7 @@ article
 		display: block
 
 	.exhibition-current
-		margin: 4em auto 2em auto
+		margin: 4em auto
 		max-width: 780px
 		width: 75%
 
