--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -39,6 +39,11 @@ main.index,
 .wrap.index {
   min-height: 100%; }
 
+button {
+  background: none;
+  border: none;
+  outline: none; }
+
 figure {
   margin: 0; }
   figure img {
@@ -273,7 +278,7 @@ article {
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
-  margin-top: 2em;
+  margin: 2em auto 4em auto;
   padding: 1em;
   position: relative; }
   .exhibition-current .exhibition-content {
@@ -297,22 +302,48 @@ article {
     font-weight: bold;
     line-height: 1em;
     margin: 1em auto; }
-  .exhibition-current .exhibition-type {
-    font-size: 12px;
+
+.exhibition-past {
+  display: inline-block;
+  margin: 1em;
+  text-align: left;
+  width: 300px; }
+  .exhibition-past .exhibition-detail {
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0; }
+  .exhibition-past .exhibition-img {
+    background-position: center;
+    -webkit-background-size: cover;
+    background-size: cover;
+    height: 180px;
+    width: 300px; }
+    .exhibition-past .exhibition-img a {
+      display: block;
+      height: 100%;
+      width: 100%; }
+  .exhibition-past .exhibition-title {
+    font-size: 18px;
     font-weight: bold;
-    left: 0;
-    position: absolute;
-    right: 0;
-    text-transform: uppercase;
-    top: -3em; }
-    .exhibition-current .exhibition-type:after {
-      border: 1px solid;
-      bottom: -6em;
-      content: "";
-      height: 5.5em;
-      left: -webkit-calc(50% - 1px);
-      left: calc(50% - 1px);
-      position: absolute; }
+    margin: 0;
+    margin-top: 0.25em; }
+
+.exhibition-type {
+  font-size: 12px;
+  font-weight: bold;
+  left: 0;
+  position: absolute;
+  right: 0;
+  text-transform: uppercase;
+  top: -3em; }
+  .exhibition-type:after {
+    border: 1px solid;
+    bottom: -6em;
+    content: "";
+    height: 5.5em;
+    left: -webkit-calc(50% - 1px);
+    left: calc(50% - 1px);
+    position: absolute; }
 
 .footer-item {
   margin-bottom: 1em; }
@@ -397,6 +428,29 @@ article {
 
 .next-post-link {
   right: 1em; }
+
+.past-exhibitions {
+  margin-top: 8em;
+  position: relative;
+  text-align: center; }
+  .past-exhibitions .exhibition-type {
+    top: -8em; }
+  .past-exhibitions .past-exhibition-by-year {
+    position: relative; }
+    .past-exhibitions .past-exhibition-by-year .exhibition-close {
+      font-weight: bold;
+      position: absolute;
+      right: 0.5em;
+      top: 0.5em; }
+  .past-exhibitions .past-exhibition-year {
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0.5em auto; }
+    .past-exhibitions .past-exhibition-year a {
+      color: rgba(0, 0, 0, 0.3); }
+    .past-exhibitions .past-exhibition-year.active a,
+    .past-exhibitions .past-exhibition-year a:hover {
+      color: black; }
 
 .prev-post-link {
   left: 1em;
@@ -708,7 +762,7 @@ article {
     display: block; }
 
   .exhibition-current {
-    margin: 4em auto 2em auto;
+    margin: 4em auto;
     max-width: 780px;
     width: 75%; }
 
