Past exhibitions interactions

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -180,11 +180,22 @@ article
 		line-height: 1em
 		margin: 1em auto
 
+.exhibition-group
+	display: none
+	position: relative
+
+	.exhibition-close
+		font-weight: bold
+		line-height: 1em
+		position: absolute
+		right: -0.5em
+		top: -1em
+
 .exhibition-past
 	display: inline-block
-	margin: 1em
+	margin: 1em 0
 	text-align: left
-	width: 300px
+	width: 280px
 
 	.exhibition-detail
 		font-size: 14px
@@ -195,7 +206,6 @@ article
 		background-position: center
 		background-size: cover
 		height: 180px
-		width: 300px
 
 		a
 			display: block
@@ -325,12 +335,6 @@ article
 
 	.past-exhibition-by-year
 		position: relative
-
-		.exhibition-close
-			font-weight: bold
-			position: absolute
-			right: 0.5em
-			top: 0.5em
 
 	.past-exhibition-year
 		font-size: 32px
@@ -627,6 +631,9 @@ article
 
 		.exhibition-title
 			width: 50%
+
+	.exhibition-past
+		margin: 1em
 
 	.index-menu
 		margin-bottom: 0
