--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -142,6 +142,10 @@ main {
     margin-right: -0.25em; } }
 article {
   padding: 0 1em; }
+  article.exhibition .post-title {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 470px; }
 
 .announcements {
   font-size: 17px;
@@ -570,6 +574,11 @@ article {
       position: absolute;
       top: -2.5em; }
 
+.post-subtitle {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center; }
+
 .post-title {
   font-size: 38px;
   font-weight: bold;
@@ -671,6 +680,7 @@ article {
 @media screen and (min-width: 48em) {
   article {
     margin: 0 auto;
+    max-width: 800px;
     width: 70%; }
 
   .artists li {
