--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -235,7 +235,9 @@ article {
   list-style-type: none;
   margin: 0 auto;
   margin-top: 2em;
-  padding: 0;
+  padding: 0; }
+
+.artists {
   width: 80%; }
 
 .events {
@@ -406,38 +408,6 @@ article {
     .navigation-menu .social-networks .social-network {
       color: white; }
 
-.news-item {
-  background-position: left;
-  background-repeat: no-repeat;
-  -webkit-background-size: auto 100%;
-  background-size: auto 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 2em auto;
-  max-width: 600px;
-  padding: 2em 4em;
-  position: relative;
-  text-align: center; }
-  .news-item .news-title {
-    margin: 0.5em auto; }
-  .news-item .read-more {
-    display: inline-block; }
-  .news-item > div {
-    position: relative;
-    z-index: 2; }
-  .news-item:nth-child(even) {
-    background-position: right; }
-  .news-item:before {
-    background-color: rgba(255, 255, 255, 0.75);
-    content: "";
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 1; }
-
 .next-post-link,
 .prev-post-link {
   bottom: 0;
@@ -464,6 +434,50 @@ article {
 
 .next-post-link {
   right: 1em; }
+
+.news-item {
+  background-position: left;
+  background-repeat: no-repeat;
+  -webkit-background-size: auto 100%;
+  background-size: auto 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 2em auto;
+  max-width: 600px;
+  padding: 1em;
+  position: relative;
+  text-align: center; }
+  .news-item .news-date {
+    font-size: 12px;
+    font-weight: 500; }
+  .news-item .news-excerpt {
+    font-family: suisse_works;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 0 auto;
+    max-width: 450px; }
+  .news-item .news-title {
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0.5em auto;
+    max-width: 370px; }
+  .news-item .read-more {
+    display: inline-block; }
+  .news-item > div {
+    position: relative;
+    z-index: 2; }
+  .news-item:nth-child(even) {
+    background-position: right; }
+  .news-item:before {
+    background-color: rgba(255, 255, 255, 0.75);
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1; }
 
 .past-exhibitions {
   margin-top: 8em;
@@ -801,6 +815,9 @@ article {
   .next-post-link,
   .prev-post-link {
     display: block; }
+
+  .news-item {
+    padding: 2em 4em; }
 
   .picture-credits {
     display: block; }
