News single post template

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -7,6 +7,13 @@ article
 			margin-right: auto
 			max-width: 470px
 
+	&.post
+		.post-attachment-link
+			text-transform: uppercase
+			
+		.post-title
+			margin-top: 0.25em
+
 .announcements
 	font-size: 17px
 	margin: 0 auto
@@ -460,6 +467,12 @@ article
 			font-size: 20px
 			font-weight: bold
 			text-align: center
+
+.post-date
+	font-size: 12px
+	font-weight: 500
+	margin: 0 auto
+	text-align: center
 
 .post-gallery
 	margin: 0 auto
