--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -146,6 +146,10 @@ article {
     margin-left: auto;
     margin-right: auto;
     max-width: 470px; }
+  article.post .post-attachment-link {
+    text-transform: uppercase; }
+  article.post .post-title {
+    margin-top: 0.25em; }
 
 .announcements {
   font-size: 17px;
@@ -558,6 +562,12 @@ article {
       font-size: 20px;
       font-weight: bold;
       text-align: center; }
+
+.post-date {
+  font-size: 12px;
+  font-weight: 500;
+  margin: 0 auto;
+  text-align: center; }
 
 .post-gallery {
   margin: 0 auto;
