--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -623,6 +623,12 @@ article
 		font-size: 1.5em
 		padding: 0.25em
 
+#map-canvas
+	height: 500px
+	margin: 0
+	padding: 0
+	width: 100%
+
 #the-gallery
 	.contact-info
 		margin: 0 auto
