--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -25,6 +25,10 @@ article
 		line-height: 1em
 		padding: 0.75em 1em
 
+.arrow
+	margin-top: 2em
+	text-align: center
+
 .artist
 	box-sizing: border-box
 
