--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -161,6 +161,10 @@ article {
     line-height: 1em;
     padding: 0.75em 1em; }
 
+.arrow {
+  margin-top: 2em;
+  text-align: center; }
+
 .artist {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
