--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -367,7 +367,7 @@ article
 			outline: none
 			padding: 0.3em 0.5em
 			text-transform: uppercase
-			transition: 0.5 all
+			transition: 0.5s all
 
 			&:hover
 				background: black
