Artist whole clickable

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -89,6 +89,14 @@ article
 				left: calc(50% - 1px)
 				position: absolute
 
+		& > a
+			height: 100%
+			left: 0
+			position: absolute
+			top: 0
+			width: 100%
+			z-index: 3
+
 		&:before
 			background-color: rgba(255, 255, 255, 0.75)
 			content: ''
