--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -221,6 +221,13 @@ article {
         left: -webkit-calc(50% - 1px);
         left: calc(50% - 1px);
         position: absolute; }
+    .artist.thumb > a {
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 3; }
     .artist.thumb:before {
       background-color: rgba(255, 255, 255, 0.75);
       content: "";
