--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -615,7 +615,9 @@ article
 	text-align: center
 
 .prod-team
+	color: rgba(0, 0, 0, 0.3)
 	font-family: monocromo
+	font-size: 12px
 	position: absolute
 	right: 0.5rem
 	-webkit-text-orientation: upright
@@ -630,10 +632,12 @@ article
 	z-index: 1
 
 	a
+		color: rgba(0, 0, 0, 0.3)
 		display: inline-block
 		transition: transform 0.3s
 
 		&:hover
+			color: black
 			transform: rotate(90deg)
 
 .read-more,
